Agrega la opcion de adjuntar documentos a la correspondencia

--- a/Atensoli/Web.config
+++ b/Atensoli/Web.config
@@ -11,21 +11,23 @@
     <!--<add name="CallCenterConnectionString" connectionString="Data Source=SERVER8;Database=Atensoli;User ID=sa; password =vv2832f1" providerName="System.Data.SqlClient" />-->
     <!--**************-->
     
-    <!--DESARROLLO CASA-->
+    <!--CASA-->
     <add name="CallCenterConnectionString" connectionString="Data Source=LAPTOP-CARLOS\SQLEXPRESS;Database=Atensoli;Integrated Security=True" providerName="System.Data.SqlClient" />
      <!--**************-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="102400" executionTimeout="3600" />
   </system.web>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     
     <!--PRODUCCION-->
     <!--<add key="connectionString" value="Data Source=SERVER8;Database=Atensoli;User ID=sa; password =vv2832f1" />-->
-    <!--DESARROLLO CASA-->
+    <!--<add key="ftpServer" value="ftp://172.16.0.177" />-->
+    <!-- CASA-->
     <add key="connectionString" value="Data Source=LAPTOP-CARLOS\SQLEXPRESS;Database=Atensoli;Integrated Security=True" />
+    <add key="ftpServer" value="ftp://127.0.0.1" />
     <!--**************-->
   </appSettings>
 </configuration>
