--- a/Atensoli/Web.config
+++ b/Atensoli/Web.config
@@ -1,35 +1,37 @@
-<?xml version="1.0"?>
-
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
   <connectionStrings>
     <!--PRODUCCION-->
     <!--<add name="CallCenterConnectionString" connectionString="Data Source=SERVER8;Database=Atensoli;User ID=sa; password =vv2832f1" providerName="System.Data.SqlClient" />-->
     <!--**************-->
-    
     <!--CASA-->
-    <add name="CallCenterConnectionString" connectionString="Data Source=LAPTOP-CARLOS\SQLEXPRESS;Database=Atensoli;Integrated Security=True" providerName="System.Data.SqlClient" />
-     <!--**************-->
+    <add name="CallCenterConnectionString" connectionString="Server=CARLOS-LAPTOP;Initial Catalog=Atensoli;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"/>
+    <!--**************-->
   </connectionStrings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" maxRequestLength="102400" executionTimeout="3600" />
+    <compilation debug="true" targetFramework="4.8"/>
+    <httpRuntime targetFramework="4.5" maxRequestLength="102400" executionTimeout="3600"/>
   </system.web>
   <appSettings>
-  <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-    
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
     <!--PRODUCCION-->
     <!--<add key="connectionString" value="Data Source=SERVER8;Database=Atensoli;User ID=sa; password =vv2832f1" />-->
     <!--<add key="ftpServer" value="ftp://172.16.0.177" />-->
     <!-- CASA-->
-    <add key="connectionString" value="Data Source=LAPTOP-CARLOS\SQLEXPRESS;Database=Atensoli;Integrated Security=True" />
-    <add key="ftpServer" value="ftp://127.0.0.1" />
+    <add key="connectionString" value="Server=CARLOS-LAPTOP;Initial Catalog=Atensoli;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"/>
+    <add key="ftpServer" value="ftp://127.0.0.1"/>
     <!--**************-->
   </appSettings>
 </configuration>
-
-
