--- a/Atensoli/packages.config
+++ b/Atensoli/packages.config
@@ -3,6 +3,7 @@
   <package id="jQuery" version="1.7" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net452" />
   <package id="Npgsql" version="3.2.6" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net452" />
 </packages>
